--- a/Day1Homework/Day1Homework/Views/Home/Index.cshtml
+++ b/Day1Homework/Day1Homework/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model  Day1Homework.Models.ViewModels.MyViewModel
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -6,27 +7,27 @@
 <div class="well">
     <form class="form-horizontal">
         <div class="form-group">
-            @Html.Label("類別",new { @class= "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.Category, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
                 @Html.DropDownList("category", (List<SelectListItem>)ViewBag.CategoryItems, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("金額", new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.Amount, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="money" placeholder="金額">
+                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", @placeholder="金額" } })
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("日期", new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.Date, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="date" placeholder="日期">
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder="日期" } })
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("備註", new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.Notes, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                <textarea class="form-control" id="description"></textarea>
+                @Html.TextArea("Notes", new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
