--- a/Day1Homework/Day1Homework/Views/Home/Index.cshtml
+++ b/Day1Homework/Day1Homework/Views/Home/Index.cshtml
@@ -9,7 +9,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Category, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.DropDownList("category", (List<SelectListItem>)ViewBag.CategoryItems, new { @class = "form-control" })
+
+                @Html.EnumDropDownListFor(model => model.Category, "請選擇", new { @class = "form-control" })
+                @*@Html.DropDownList("category", (List<SelectListItem>)ViewBag.CategoryItems, new { @class = "form-control" })*@
             </div>
         </div>
         <div class="form-group">
