--- a/Day1Homework/Day1Homework/Views/Home/Index.cshtml
+++ b/Day1Homework/Day1Homework/Views/Home/Index.cshtml
@@ -4,10 +4,11 @@
 }
 
 
-<div class="well">
-    <form class="form-horizontal">
-        @Html.AntiForgeryToken()
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
+    <div class="well form-horizontal">
         <div class="form-group">
             @Html.LabelFor(model => model.Category, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
@@ -17,13 +18,13 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Amount, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", @placeholder="金額" } })
+                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", @placeholder = "金額" } })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Date, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder="日期" } })
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "日期" } })
             </div>
         </div>
         <div class="form-group">
@@ -37,7 +38,7 @@
                 <button type="submit" class="btn btn-default">送出</button>
             </div>
         </div>
-    </form>
-</div>
+    </div>
+}
 
 @Html.Action("GridViewAction")
