回家作業：加入欄位驗證，所有欄位必填 ▪ 「金額」只能輸入正整數 ▪ 「日期」不得大於今天 ▪ 「備註」最多輸入100個字元(備註為 TextArea)

--- a/Day1Homework/Day1Homework/Views/Home/Index.cshtml
+++ b/Day1Homework/Day1Homework/Views/Home/Index.cshtml
@@ -12,25 +12,29 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Category, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.DropDownList("category", (List<SelectListItem>)ViewBag.CategoryItems, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.Category, (List<SelectListItem>)ViewBag.CategoryItems, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Category)
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Amount, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
                 @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", @placeholder = "金額" } })
+                @Html.ValidationMessageFor(model => model.Amount)
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Date, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "日期" } })
+                @Html.ValidationMessageFor(model => model.Date)
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.TextArea("Notes", new { @class = "form-control" })
+                @Html.TextAreaFor(model => model.Notes, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Notes)
             </div>
         </div>
         <div class="form-group">
@@ -42,3 +46,7 @@
 }
 
 @Html.Action("GridViewAction")
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
