--- a/Day1Homework/Day1Homework/Views/Shared/_Layout.cshtml
+++ b/Day1Homework/Day1Homework/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title - 我的記帳本</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/jquery.datetimepicker.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -39,6 +40,12 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/jquery.datetimepicker.js"></script>
+    <script>
+        $(function () {
+            $("[data-datetimepicker]").datetimepicker();
+        });
+    </script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
